--- a/index.html
+++ b/index.html
@@ -1,63 +1,75 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Data Science Projects</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-      <h1>My Data Science Projects</h1>
-      <nav>
-        <ul>
-          <li><a href="#about">About Me</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+      <div class="container">
+        <h1>My Data Science Projects</h1>
+        <nav>
+          <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <section id="about">
-        <h2>About Me</h2>
-        <p>Insert your bio here.</p>
+        <div class="container">
+          <h2>About Me</h2>
+          <p>Insert your bio here.</p>
+        </div>
       </section>
       <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-          <li>
-            <h3>Project 1</h3>
-            <p>Description of project 1.</p>
-            <a href="#">Link to project 1</a>
-          </li>
-          <li>
-            <h3>Project 2</h3>
-            <p>Description of project 2.</p>
-            <a href="#">Link to project 2</a>
-          </li>
-          <li>
-            <h3>Project 3</h3>
-            <p>Description of project 3.</p>
-            <a href="#">Link to project 3</a>
-          </li>
-        </ul>
+        <div class="container">
+          <h2>Projects</h2>
+          <ul>
+            <li>
+              <h3>Project 1</h3>
+              <p>Description of project 1.</p>
+              <a href="#">Link to project 1</a>
+            </li>
+            <li>
+              <h3>Project 2</h3>
+              <p>Description of project 2.</p>
+              <a href="#">Link to project 2</a>
+            </li>
+            <li>
+              <h3>Project 3</h3>
+              <p>Description of project 3.</p>
+              <a href="#">Link to project 3</a>
+            </li>
+          </ul>
+        </div>
       </section>
       <section id="contact">
-        <h2>Contact</h2>
-        <form>
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name"><br>
+        <div class="container">
+          <h2>Contact</h2>
+          <form>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name"><br>
 
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email"><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email"><br>
 
-          <label for="message">Message:</label>
-          <textarea id="message" name="message"></textarea><br>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message"></textarea><br>
 
-          <input type="submit" value="Submit">
-        </form>
+            <input type="submit" value="Submit">
+          </form>
+        </div>
       </section>
     </main>
     <footer>
-      <p>&copy; 2021 My Data Science Projects</p>
+      <div class="container">
+        <p>&copy; 2021 My Data Science Projects</p>
+      </div>
     </footer>
     <script src="script.js"></script>
   </body>
