--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Data Science Projects</title>
+    <title>Ed Davis</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
