--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="container">
-        <h1>My Data Science Projects</h1>
+        <h1>My Data Science Projects 2</h1>
         <nav>
           <ul>
             <li><a href="#about">About Me</a></li>
