--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
           </ul>
         </div>
       </section>
+      <section id="accomplishments">
+        <h2>Accomplishments</h2>
+        <img src="world_stage_final (2) (2).jpg" alt="World Stage Data Visualization">
+      </section>
       <section id="contact">
         <div class="container">
           <h2>Contact</h2>
