--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <body>
     <header>
       <div class="container">
-        <h1>My Data Science Projects 2</h1>
+        <h1>Ed Davis</h1>
+        <h2>PhD Student</h2>
+        <h3>Computational Statistics and Data Science</h3>
+        <h4>University of Bristol</h4>
         <nav>
           <ul>
             <li><a href="#about">About Me</a></li>
