--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
       <div class="container">
         <h1>Ed Davis</h1>
+        <img src="Ed Davis_2.jpg" alt="Profile Picture" class="profile-picture">
         <h2>PhD Student</h2>
         <h3>Computational Statistics and Data Science</h3>
         <h4>University of Bristol</h4>
