--- a/index.html
+++ b/index.html
@@ -71,14 +71,17 @@
         </div>
       </section>
       <section id="accomplishments">
+        <div class="container">
         <h2>Accomplishments</h2>
         <h3>Award-Winning Data Visualisation</h3>
         <p>Runner-up in the Jean Golding Institute's <a href="https://www.bristol.ac.uk/golding/get-involved/competitions/the-beauty-of-data-competition-2022/">Beauty of Data</a> competition. This visualisation was presented at the <a href=https://www.bristol.ac.uk/golding/events/showcase/>Bristol Data and AI Showcase 2022</a>.
-
+            
             This visualisation displays an embedding of a friendship network between countries on the world stage based on their alliances. </p>
+            <p>(Click image for full-size)</p>
         <!-- <img src="world_stage.jpg" alt="World Stage Data Visualization" class="images"> -->
-        <a href="world_stage_fullsize.jpg" target="_blank"><img src="world_stage.jpg" alt="World Stage Data Visualization" class="images"></a>
-      </section>
+        <a href="world_stage.jpg" target="_blank"><img src="world_stage.jpg" alt="World Stage Data Visualization" class="images"></a>
+        </div>
+    </section>
 
     <section id="blog">
     <div class="container">
