Think I fixed the nav bar for mobile (mostly)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ STILL TO FIX
   </head>
   <body>
     <header>
-      <div class="container">
+      <div>
         <h1>Ed Davis</h1>
         <img src="Ed Davis_2.jpg" alt="Profile Picture" class="profile-picture" width="200">
         <h2>PhD Student</h2>
