Added supervisor links

--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!-- 
 STILL TO FIX
 
-- Nav bar bad at small widths
-- need to add social links
 - supervisor links
-- hide some of the abstract for the paper
-- add a high-level summary of paper? (Or maybe just write a blog post about it)
 -->
 
 <!DOCTYPE html>
@@ -50,6 +46,7 @@ STILL TO FIX
       <p>Twitter:</span> <a href="https://twitter.com/EdD8ta">EdD8ta</a></p>
       <p>LinkedIn:</span> <a href="https://www.linkedin.com/in/edwarddavis941/">edwarddavis941</a></p>
       <p>GitHub:</span> <a href="https://github.com/edwarddavis1">edwarddavis1</a></p>
+      <p>PhD supervised by <a href="https://people.maths.bris.ac.uk/~pr12244/">Prof. Patrick Rubin-Delanchy</a> and <a href="https://people.maths.bris.ac.uk/~madjl/">Dr Daniel Lawson</a>.</p>
     </ul>
   </div>
 </section>
