--- a/intro_to_graph_embedding.html
+++ b/intro_to_graph_embedding.html
@@ -5,17 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Ed Davis</title>
         <link rel="stylesheet" href="style.css" />
+        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+        <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
     </head>
     <body>
 <header>
-    <nav>
-        <ul class="menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="blog_page.html">Blog</a></li>
-        </ul>
-    </nav>
-</header>
-        
+  <nav>
+    <div class="menu">
+      <button onclick="location.href='index.html'">Home</button>
+      <!-- <button onclick="location.href='blog_page.html'">Blog</button> -->
+    </div>
+  </nav>
+</header>           
 
 
 
@@ -24,13 +25,30 @@
     <div class="container">
         <h2>An Introduction to Graph Embedding</h2>
 
-        <p>What is a graph embedding anyway?</p>
+        <p>You may not realise it, but graphs are everywhere. The neuron interactions in your brain provide you with conscious thought [ref], and protein interactions make up your immune system [ref]. The molecules that you interact with look [ref] and even smell [ref] in a specific way due to the structure of their atomic composition and the language you use to communicate holds meaning due to specific orderings and contexts of words [ref]. While each of these complex systems may seem to exist in wildy different domains, they can all be represented as a graph.</p> 
 
-        <div class="network-embedding-container">
+        <p>Graph embedding gives us a way of representing these large and complex systems in a concise space, allowing us to visualise the structure they hold as well as apply downstream machine learning techniques to learn about how these systems work.</p>
+
+        <h3>Spectral Embedding</h3>
+        <p>Spectral embedding is one of the simplest graph embedding techniques, posessing both speed and theoretical tractability.</p>
+
+        <!-- <p>$$\sum_{i=1}^n i = \frac{n(n+1)}{2}$$</p> -->
+
+      <div class="network-embedding-container">
+        <figure>
+          <iframe src="https://edwarddavis1.github.io/harry_potter_vis/index.html" width="100%" frameborder="0"></iframe>
+        </figure>
+      </div>
+      <center>
+      <p><strong>Figure:</strong> (Left) An emnity network of Harry Potter characters. (Right) A spectral embedding of the network.</p>
+      </center>
+
+
+      
+        <!-- <div class="network-embedding-container">
         <iframe src="https://edwarddavis1.github.io/network_to_embedding_figure/index.html" width="100%"frameborder="0"></iframe>
-        </div>
+        </div> -->
 
-        <p>More text</p>
     </div>
 
 
