--- a/the_importance_of_stability.html
+++ b/the_importance_of_stability.html
@@ -8,14 +8,13 @@
     </head>
     <body>
 <header>
-    <nav>
-        <ul class="menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="blog_page.html">Blog</a></li>
-        </ul>
-    </nav>
-</header>
-        
+  <nav>
+    <div class="menu">
+      <button onclick="location.href='index.html'">Home</button>
+      <!-- <button onclick="location.href='blog_page.html'">Blog</button> -->
+    </div>
+  </nav>
+</header>       
 
 
 
