added link to paper preprint

--- a/index.html
+++ b/index.html
@@ -42,6 +42,28 @@
 </header>
 
     <main>
+<section id="contact">
+  <div class="container">
+    <h2>Contact & Links</h2>
+    <ul>
+      <p>Email:</span> edward.davis[at]bristol.ac.uk</p>
+      <p>Office: School of Mathematics
+        University of Bristol,
+        Fry Building, GA.06
+        Woodland Road
+        Bristol, BS8 1UG.</p>
+      <p>Twitter:</span> <a href="https://twitter.com/EdD8ta">EdD8ta</a></p>
+      <p>LinkedIn:</span> <a href="https://www.linkedin.com/in/edwarddavis941/">edwarddavis941</a></p>
+      <p>GitHub:</span> <a href="https://github.com/edwarddavis1">edwarddavis1</a></p>
+      <p>PhD supervised by <a href="https://people.maths.bris.ac.uk/~pr12244/">Prof. Patrick Rubin-Delanchy</a> and <a href="https://people.maths.bris.ac.uk/~madjl/">Dr Daniel Lawson</a>.</p>
+    </ul>
+  </div>
+</section>
+
+
+
+
+
       <section id="about">
         <div class="container">
           <h2>Research Outline</h2>
@@ -63,24 +85,6 @@
 
 
 
-
-<section id="contact">
-  <div class="container">
-    <h2>Contact & Links</h2>
-    <ul>
-      <p>Email:</span> edward.davis[at]bristol.ac.uk</p>
-      <p>Office: School of Mathematics
-        University of Bristol,
-        Fry Building, GA.06
-        Woodland Road
-        Bristol, BS8 1UG.</p>
-      <p>Twitter:</span> <a href="https://twitter.com/EdD8ta">EdD8ta</a></p>
-      <p>LinkedIn:</span> <a href="https://www.linkedin.com/in/edwarddavis941/">edwarddavis941</a></p>
-      <p>GitHub:</span> <a href="https://github.com/edwarddavis1">edwarddavis1</a></p>
-      <p>PhD supervised by <a href="https://people.maths.bris.ac.uk/~pr12244/">Prof. Patrick Rubin-Delanchy</a> and <a href="https://people.maths.bris.ac.uk/~madjl/">Dr Daniel Lawson</a>.</p>
-    </ul>
-  </div>
-</section>
 
 
 
@@ -104,7 +108,7 @@ Embedding</h3>
                         19 policy changes, which leads us to conclude that the temporal structure recovered by
                         URLSE is correct.
                         </figcaption> -->
-                <a href="#">Link to paper [coming soon]</a>
+                <a href="https://arxiv.org/abs/2311.09251">Preprint link</a>
             </div> 
       </section>
 
