added ICLR acceptance statement

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
             <div class="container">
-            <h3><a href="https://arxiv.org/abs/2405.19230"> Valid Conformal Prediction for Dynamic GNNs</a></h3>
+            <h3><a href="https://arxiv.org/abs/2405.19230"> Valid Conformal Prediction for Dynamic GNNs (Accepted, ICLR)</a></h3>
             <article>
               Graph neural networks (GNNs) are powerful black-box models which have shown impressive empirical performance. However, without any form of uncertainty quantification, it can be difficult to trust such models in high-risk scenarios. Conformal prediction aims to address this problem, however, an assumption of exchangeability is required for its validity which has limited its applicability to static graphs and transductive regimes. 
 
