--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     integrity="sha512-+J+JzvJZw5zJjJ6zvZJz1WJjzRJv8v8xJQ7xJf2gJ6Y1ZzJv4yJ8J9zJZJfZQJzv5y4zJZ6e7JQzvzJzZJ4zJw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="new_style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ed Davis</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="new_style.css">
 </head>
 
 <body>
@@ -99,18 +99,16 @@
           other fields of maths, including <a href="https://arxiv.org/abs/2405.19230"> conformal prediction</a> and
           <a href="https://arxiv.org/abs/2410.20895">the bootstrap</a>.
         </p>
-        <!-- <p>My work focuses on dynamic network embedding. 
 
-            Dynamic networks encode both spatial and temporal relations between nodes, which are desirable for many applications from cyber security to neuroscience. By representing the nodes of the network as a vector space, it allows us to detect spatial and temporal patterns through clustering.
-            
-            Methods that I have developed during my PhD have been used by Microsoft and LV, and I have presented these methods at the <a href="https://ima.org.uk/17625/4th-ima-conference-on-the-mathematical-challenges-of-big-data/">Institute of Mathematics Big Data Conference</a> and the <a href="https://compass.blogs.bristol.ac.uk/calendar_event/compass-conference/">COMPASS conference</a> in 2022. 
-            
-            I am interested in progressing dynamic embedding methods and applying them to a diverse range of problems.</p> -->
+        <p>See the graphic below for a visual explanation of a dynamic graph embedding. On the left, we see a network
+          plotted in the conventional way. Each node is assigned one of three colours, and each node of the same colour
+          connects to the network in the same way (up to noise). On the right, we see a graph embedding </p>
+
       </div>
 
       <div class="container">
-        <div class="network-embedding-container">
-          <iframe src="https://edwarddavis1.github.io/network_to_dynamic_graph_embedding/index.html" width="100%"
+        <div class="network-embedding-container iframe-container">
+          <iframe src="https://edwarddavis1.github.io/network_to_dynamic_graph_embedding/index.html"
             frameborder="0"></iframe>
         </div>
       </div>
