--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
       <div class="container">
         <h2>What is a graph embedding?</h2>
-        <p>See the graphic below for a visual explanation of a dynamic graph embedding. On the left, we see a Harry Potter interaction network plotted in the conventional way. On the right, we see a corresponding graph embedding where each node is represented in a 2D space (hover over each node to see the correspondence). In this case, the graph embedding is able to separate the good and the bad characters in the Harry Potter world.</p>
+        <p>See the graphic below for a visual explanation of a dynamic graph embedding. On the left, we see a Harry Potter emnity network (adversarial interactions) plotted in the conventional way. On the right, we see a corresponding graph embedding where each node is represented in a 2D space (hover over each node to see the correspondence). In this case, the graph embedding is able to separate the good and the bad characters in the Harry Potter world.</p>
 
 
         <div class="network-embedding-container iframe-container">
