more minor typos

--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
 
 
       <div class="container">
-        <h3><a href="https://arxiv.org/abs/2311.09251">A Simple but Powerful Framework for Dynamic Graph Embedding</a>
+        <h3><a href="https://arxiv.org/abs/2311.09251">A Simple and Powerful Framework for
+Stable Dynamic Network Embedding</a>
         </h3>
         <article>
           <p>In this paper, we address the problem of dynamic network embedding, that is, representing the nodes of a
@@ -235,7 +236,7 @@
     </section>
     <section id="accomplishments">
       <div class="container">
-        <h2>Accomplishments</h2>
+        <h2>Other Accomplishments</h2>
         <h3>Award-Winning Data Visualisation</h3>
         <p>Runner-up in the Jean Golding Institute's <a
             href="https://www.bristol.ac.uk/golding/get-involved/competitions/the-beauty-of-data-competition-2022/">Beauty
