--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ed Davis</title>
   <link rel="stylesheet" href="new_style.css">
+    <!-- Include Prism.js CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/themes/prism.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -236,7 +238,36 @@ Stable Dynamic Network Embedding</a>
     </section>
     <section id="accomplishments">
       <div class="container">
-        <h2>Other Accomplishments</h2>
+        <h2>Other Work</h2>
+
+        <h3>
+          <img src="pyemb_logo.png" alt="pyemb logo" style="vertical-align: middle; height: 1em;">
+          pyemb - EDA of embeddings in Python
+        </h3>
+
+        <p>A Python package for exploring complex datasets including high-dimensional data, relational databases and networks.</p>
+
+        <p>For example, the below code can quickly compute a <a href="https://arxiv.org/abs/2311.09251">URLSE dynamic embedding</a> and then produce an interactive plot of the embedding over time.</p>
+        
+
+        <!-- <code>pip install pyemb</code> -->
+    <pre class="code-background"><code class="language-python">import pyemb as eb
+
+# Embed the graph using unfolded regularised Laplacian spectral embedding
+d = 10
+URLSE_emb = eb.dyn_embed(As, d=d, method="URLSE")
+
+# Quick interactive + animated plot of the embedding
+fig = eb.quick_plot(URLSE_emb, n, T, node_labels)</code></pre>
+
+    <div class="network-embedding-container iframe-container">
+      <figure>
+        <iframe src="https://edwarddavis1.github.io/example_pyemb_quick_plot/" width="100%" frameborder="0"></iframe>
+      </figure>
+    </div>
+
+
+
         <h3>Award-Winning Data Visualisation</h3>
         <p>Runner-up in the Jean Golding Institute's <a
             href="https://www.bristol.ac.uk/golding/get-involved/competitions/the-beauty-of-data-competition-2022/">Beauty
@@ -312,6 +343,11 @@ Stable Dynamic Network Embedding</a>
     //     "#6153CC",
     // ];
   </script>
+
+
+  <!-- Include Prism.js JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/prism.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/components/prism-python.min.js"></script>
 </body>
 
 </html>
