--- a/index.html
+++ b/index.html
@@ -17,23 +17,12 @@
 <body>
   <header>
     <div>
-      <h1 style="color: #fff;">Ed Davis</h1>
+      <h1 style="color: #fff;">Dr Ed Davis</h1>
       <img src="Ed Davis_2.jpg" alt="Profile Picture" class="profile-picture" width="200">
-      <h2 style="color: #fff;">PhD Student</h2>
-      <h3 style="color: #fff;">Computational Statistics and Data Science</h3>
-      <h4 style="color: #fff;">University of Bristol</h4>
+      <h2 style="color: #fff;">PhD, Computational Statistics and Data Science</h2>
+      <h3 style="color: #fff;">University of Bristol</h3>
     </div>
   </header>
-  <!-- <header>
-  <nav>
-    <ul class="menu">
-      <li><a href="#about">Research Outline</a></li>
-      <li><a href="#papers">Papers</a></li>
-      <li><a href="#accomplishments">Accomplishments</a></li>
-      <li><a href="blog_page.html">Blog</a></li>
-    </ul>
-  </nav>
-</header> -->
 
   <header>
     <nav>
@@ -45,6 +34,8 @@
       </div>
     </nav>
   </header>
+
+
 
   <main>
     <section id="contact">
