--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div>
-      <h1 style="color: #fff;">Dr Ed Davis</h1>
+      <h1 style="color: #fff;">Ed Davis</h1>
       <img src="Ed Davis_2.jpg" alt="Profile Picture" class="profile-picture" width="200">
       <h2 style="color: #fff;">PhD, Computational Statistics and Data Science</h2>
       <h3 style="color: #fff;">University of Bristol</h3>
@@ -84,7 +84,7 @@
 
     <section id="about">
       <div class="container">
-        <h2>Research Outline</h2>
+        <h2>PhD Research Outline</h2>
         <p>
           My PhD thesis addresses the problem of how to understand information encoded in
           multi-layer graphs. Here, a graph could refer to a network or a corpus of text,
