added personal email to website

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="container">
         <h2>Contact & Links</h2>
         <ul class="contact-list">
-          <li>Email: <a href="mailto:edward.davis[at]bristol.ac.uk">edward.davis[at]bristol.ac.uk</a></li>
+          <li>Email: edwarddavis[at]hotmail.co.uk, edward.davis[at]bristol.ac.uk</li>
           <li>GitHub: <a href="https://github.com/edwarddavis1">edwarddavis1</a></li>
           <li>LinkedIn: <a href="https://www.linkedin.com/in/edwarddavis941/">edwarddavis941</a></li>
           <li>PhD supervised by <a href="https://people.maths.bris.ac.uk/~pr12244/">Prof. Patrick Rubin-Delanchy</a> and
