--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="menu">
         <button onclick="location.href='#about'">Research Outline</button>
         <button onclick="location.href='#papers'">Papers</button>
-        <button onclick="location.href='#accomplishments'">Accomplishments</button>
+        <button onclick="location.href='#projects'">Projects</button>
         <button onclick="location.href='blog_page.html'">Blog</button>
       </div>
     </nav>
@@ -238,9 +238,9 @@
     </section>
 
     </section>
-    <section id="accomplishments">
+    <section id="projects">
       <div class="container">
-        <h2>Other Work</h2>
+        <h2>Projects<h2>
 
         <h3>
           <img src="pyemb_logo.png" alt="pyemb logo" style="vertical-align: middle; height: 3em;">
