--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
       <div class="container">
         <h2>Papers</h2>
-        <h3><a href="https://arxiv.org/abs/2405.19230"> Valid Conformal Prediction for Dynamic GNNs (Accepted, ICLR)</a>
+        <h3><a href="https://arxiv.org/abs/2405.19230"> Valid Conformal Prediction for Dynamic GNNs (ICLR 2025)</a>
         </h3>
         <article>
           Graph neural networks (GNNs) are powerful black-box models which have shown impressive empirical performance.
@@ -189,7 +189,7 @@
 
       <div class="container">
         <h3><a href="https://arxiv.org/abs/2311.09251">A Simple and Powerful Framework for
-            Stable Dynamic Network Embedding</a>
+            Stable Dynamic Network Embedding (Corrections, JMLR)</a>
         </h3>
         <article>
           <p>In this paper, we address the problem of dynamic network embedding, that is, representing the nodes of a
@@ -214,7 +214,7 @@
 
       <div class="container">
         <h3><a href="https://arxiv.org/abs/2410.20895">Valid Bootstraps for Networks with Applications to Network
-            Visualisation</a></h3>
+            Visualisation (UAI 2025)</a></h3>
         <article>
           <p>Quantifying uncertainty in networks is an important step in modelling relationships and interactions
             between entities. We consider the challenge of bootstrapping an inhomogeneous random graph when only a
