added CV section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <button onclick="location.href='#papers'">Papers</button>
         <button onclick="location.href='#projects'">Projects</button>
         <button onclick="location.href='blog_page.html'">Blog</button>
+        <button onclick="location.href='cv.html'">CV</button>
       </div>
     </nav>
   </header>
@@ -110,11 +111,10 @@
           exchangeable sequence of vectors. With exchangeability, we gain access to
           other fields of maths, including <a href="https://arxiv.org/abs/2405.19230"> conformal prediction</a> and
           <a href="https://arxiv.org/abs/2410.20895">the bootstrap</a>.
+
+          
         </p>
 
-      </div>
-
-      <div class="container">
         <h2>What is a graph embedding?</h2>
         <p>See the graphic below for a visual explanation of a graph embedding. On the left, we see a Harry Potter
           emnity network (adversarial interactions) plotted in the conventional way. On the right, we see a
@@ -181,13 +181,9 @@
           encode a significant change over time despite there being none. The embedding from UGCN is exchangeable over
           time, as would be expected.
         </figcaption>
-      </div>
 
 
 
-
-
-      <div class="container">
         <h3><a href="https://arxiv.org/abs/2311.09251">A Simple and Powerful Framework for
             Stable Dynamic Network Embedding (Corrections, JMLR 2024)</a>
         </h3>
@@ -208,11 +204,9 @@
           well as an annual periodic structure before and after the pandemic. We also see that the pandemic hit Italy
           slightly before the UK and the rest of Europe.
         </figcaption>
-      </div>
 
 
 
-      <div class="container">
         <h3><a href="https://arxiv.org/abs/2410.20895">Valid Bootstraps for Networks with Applications to Network
             Visualisation (UAI 2025)</a></h3>
         <article>
